@@ -374,11 +374,21 @@ B<secondaryScroll>.
 
 Remap a key symbol. See resource B<keysym>.
 
-=item B<-xrm> I<resourcestring>
+=item B<-embed>: I<windowid>
 
-No effect on rxvt-unicode. Simply passes through an argument to be made
-available in the instance's argument list. Appears in I<WM_COMMAND> in
-some window managers.
+Tells @@RXVT_NAME@@ to embed it's windows into an already-existing window,
+which enables applications to easily embed a terminal.
+
+Right now, @@RXVT_NAME@@ will first unmap/map the specified window, so it
+shouldn't be a top-level window. @@RXVT_NAME@@ will also reconfigure it
+quite a bit, so don't expect it to keep some specific state. It's best to
+create an extra subwindow for @@RXVT_NAME@@ and leave it alone.
+
+It might be useful to know that @@RXVT_NAME@@ will not close file
+descriptors passed to it (except for stdin/out/err, of course), so you
+can use file descriptors to communicate with the programs within the
+terminal. This works regardless of wether the C<-embed> option was used or
+not.
 
 =back
 
